Added Luquid borders

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <body>
     <div id="header">
       <div class="container">
+        <div style="padding: 0 5px">
         <table width="100%">
           <tr>
-            <td align="left">
+            <td align="left">              
               <a href="#" class='logo'>Logo</a>
               <span class='slogan'>You own marketplace</span>
               <a href="#">Online Support</a>
@@ -32,6 +33,7 @@
             </td>
           </tr>          
         </table>
+        </div>
       </div>  
     </div>
     <div id="panel">
@@ -39,7 +41,7 @@
         <table width="100%">
           <tr>
             <td class="search" valign="top" colspan="3">
-              <div class='container'>
+              <div class='container'>                
                 <input class='search' />
                 <input type="submit" value="Search"/>
 
